# rust-trading-serialization-bench

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
analysis/: analyze.py  requirements.txt
analysis/lib/: bootstrap.py  scoring.py  sensitivity.py  tables.py
schemas/: trading.fbs  trading.proto
scripts/: run_experiment.sh  run_quick_test.sh  setup_environment.sh
src/: lib.rs  main.rs
src/evaluation/: environment.rs  metrics.rs  mod.rs  runner.rs  scenarios.rs
src/messages/: mod.rs  order.rs  order_book.rs  tick.rs
src/protocols/: bincode.rs  flatbuffers.rs  json.rs  mod.rs  protobuf.rs  rkyv.rs
tests/: metrics_validation.rs  runner_validation.rs  scenarios_validation.rs  serialization_correctness.rs
